[gd_scene load_steps=62 format=2]

[ext_resource path="res://assets/graphics/Lander_3.png" type="Texture" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00005.png" type="Texture" id=3]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00001.png" type="Texture" id=4]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00003.png" type="Texture" id=5]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00006.png" type="Texture" id=6]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00011.png" type="Texture" id=7]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00002.png" type="Texture" id=8]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00004.png" type="Texture" id=9]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00012.png" type="Texture" id=10]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00013.png" type="Texture" id=11]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00014.png" type="Texture" id=12]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00015.png" type="Texture" id=13]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00016.png" type="Texture" id=14]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00017.png" type="Texture" id=15]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00018.png" type="Texture" id=16]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00019.png" type="Texture" id=17]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00021.png" type="Texture" id=18]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00022.png" type="Texture" id=19]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00028.png" type="Texture" id=20]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00029.png" type="Texture" id=21]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00030.png" type="Texture" id=22]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00031.png" type="Texture" id=23]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00032.png" type="Texture" id=24]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00010.png" type="Texture" id=25]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00007.png" type="Texture" id=26]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00008.png" type="Texture" id=27]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00009.png" type="Texture" id=28]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00020.png" type="Texture" id=29]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00023.png" type="Texture" id=30]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00024.png" type="Texture" id=31]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00025.png" type="Texture" id=32]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00026.png" type="Texture" id=33]
[ext_resource path="res://assets/animations/exhaust_animation/efecto_fuego_00027.png" type="Texture" id=34]
[ext_resource path="res://scripts/TouchScreenControls.gd" type="Script" id=35]
[ext_resource path="res://assets/animations/shield.png" type="Texture" id=36]
[ext_resource path="res://themes/spacelander_font.tres" type="Theme" id=37]
[ext_resource path="res://assets/animations/energize_swirl/circle_01.png" type="Texture" id=38]
[ext_resource path="res://assets/animations/energize_swirl/circle_03.png" type="Texture" id=39]
[ext_resource path="res://assets/animations/energize_swirl/circle_04.png" type="Texture" id=40]
[ext_resource path="res://assets/animations/energize_swirl/circle_02.png" type="Texture" id=41]
[ext_resource path="res://assets/animations/new_space_mines/spark_02.png" type="Texture" id=42]
[ext_resource path="res://assets/animations/new_space_mines/spark_04.png" type="Texture" id=43]
[ext_resource path="res://assets/graphics/circle_05.png" type="Texture" id=44]
[ext_resource path="res://scenes/Lightning_X.tscn" type="PackedScene" id=45]
[ext_resource path="res://scripts/SpinSpark.gd" type="Script" id=46]
[ext_resource path="res://assets/animations/new_space_mines/spark_01.png" type="Texture" id=47]
[ext_resource path="res://assets/animations/new_space_mines/spark_03.png" type="Texture" id=48]
[ext_resource path="res://assets/sfx/whoosh1.ogg" type="AudioStream" id=49]

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 25 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 29 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "exhaust_full",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 300, 300 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 36 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 36 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 36 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 36 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 5 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "forcefield",
"speed": 15.0
} ]

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "slight"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.0235294, 0.407843, 0.952941, 1 ), Color( 1, 1, 1, 1 ), Color( 0.0235294, 0.407843, 0.952941, 1 ) ]
}

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 38 ), ExtResource( 41 ), ExtResource( 39 ), ExtResource( 40 ) ],
"loop": true,
"name": "recharge",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 15, 14 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ ExtResource( 47 ), ExtResource( 42 ), ExtResource( 48 ), ExtResource( 43 ) ],
"loop": true,
"name": "sparky",
"speed": 10.0
} ]

[node name="player" type="KinematicBody2D" groups=["player"]]
modulate = Color( 0.745098, 0.686275, 0.054902, 1 )
position = Vector2( 1036, 1705 )
scale = Vector2( 1.3, 1.3 )
collision_layer = 3
collision_mask = 3
collision/safe_margin = 0.001
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 2
rotation = 1.5708
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )
offset = Vector2( 0, -6 )
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
rotation = 1.5708
polygon = PoolVector2Array( -13.9999, 8.00012, -7, -3.99988, 0, -21, 7, -7, 12, 3, 17.0001, 15, 8.00012, 12, -1.99988, 11.0001, -8.99988, 13.0001, -15.9999, 14.0001 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -156, -0.666748 )
scale = Vector2( 0.714771, 0.347896 )
z_index = -50
frames = SubResource( 14 )
animation = "exhaust_full"
frame = 25

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.5, 1.5 )

[node name="TouchScreenControls" type="TouchScreenButton" parent="Camera2D"]
position = Vector2( -346, -626 )
scale = Vector2( 1.15248, 2.07578 )
shape = SubResource( 2 )
script = ExtResource( 35 )

[node name="TapTimer" type="Timer" parent="Camera2D/TouchScreenControls"]
wait_time = 0.4
one_shot = true

[node name="Animated_Forcefield" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 0.901961, 0.890196, 0.0431373, 1 )
position = Vector2( -3, -5 )
scale = Vector2( 1.5, 1.3 )
frames = SubResource( 7 )
animation = "forcefield"
frame = 1

[node name="Forcefield_Timer" type="Timer" parent="."]
one_shot = true

[node name="Animated_Forcefield2" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 0.901961, 0.890196, 0.0431373, 1 )
position = Vector2( -3, -5 )
scale = Vector2( 1.6, 1.4 )
frames = SubResource( 7 )
animation = "forcefield"
frame = 1

[node name="Shields" type="Label" parent="."]
visible = false
margin_left = -24.0
margin_top = -53.0
margin_right = 272.0
margin_bottom = 85.0
rect_scale = Vector2( 0.2, 0.2 )
theme = ExtResource( 37 )
text = "shields"

[node name="SlightDamageAnimation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 10 )
anims/slight = SubResource( 11 )

[node name="RechargingAnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 0.415686, 0.772549, 0.0862745, 1 )
position = Vector2( -1.33331, 0 )
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 12 )
animation = "recharge"
frame = 3
playing = true

[node name="Light2D" type="Light2D" parent="."]
visible = false
texture = ExtResource( 44 )
texture_scale = 4.52
color = Color( 0.447059, 0.376471, 0.376471, 1 )
energy = 1.52
shadow_enabled = true
shadow_color = Color( 0.160784, 0.901961, 0.0941176, 0 )

[node name="Lightning_X" parent="." instance=ExtResource( 45 )]
z_index = -1

[node name="RigidBody2D" type="RigidBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2( 1.66669, 1.33325 )
shape = SubResource( 13 )

[node name="SpinOutTimer" type="Timer" parent="."]
wait_time = 1.75
one_shot = true

[node name="SpinSpark" type="Node2D" parent="."]
visible = false
position = Vector2( 0.666687, 2 )
scale = Vector2( 0.35, 0.35 )
script = ExtResource( 46 )

[node name="Anim_sparky" type="AnimatedSprite" parent="SpinSpark"]
modulate = Color( 0.776471, 0.952941, 0.0431373, 1 )
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 15 )
animation = "sparky"
frame = 3

[node name="CameraZoomBackTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="firing_point" type="Node2D" parent="."]
position = Vector2( 29.3333, 0 )

[node name="ShootingTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ThrusterSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 49 )
pitch_scale = 1.2

[node name="BoostTimer" type="Timer" parent="."]

[connection signal="double_tap" from="Camera2D/TouchScreenControls" to="." method="_on_TouchScreenControls_double_tap"]
[connection signal="timeout" from="Forcefield_Timer" to="." method="_on_Forcefield_Timer_timeout"]
[connection signal="timeout" from="SpinOutTimer" to="." method="_on_SpinOutTimer_timeout"]
[connection signal="timeout" from="CameraZoomBackTimer" to="." method="_on_CameraZoomBackTimer_timeout"]
[connection signal="timeout" from="ShootingTimer" to="." method="_on_ShootingTimer_timeout"]
[connection signal="timeout" from="BoostTimer" to="." method="_on_BoostTimer_timeout"]
